@@ -1,5 +1,10 @@
 2007-02-08  Dalibor Topic  <robilad@kaffe.org>
 
+	* compress.h: Include zlib.h, jartool.h and pushback.h to declare the
+	types used in parameters.
+
+2007-02-08  Dalibor Topic  <robilad@kaffe.org>
+
 	* jartool.c (add_file_to_jar, add_array_to_jar): Made file_name_length
 	into a size_t.
 
